hard-gists/8b6f09310a847e0a7aed/run.log
=== Docker Run Log for 8b6f09310a847e0a7aed ===
Started at: Mi 29. Okt 18:07:49 CET 2025

[2025-10-29 18:07:49] START: Running container for 8b6f09310a847e0a7aed
[2025-10-29 18:07:49] SUCCESS: Container 13100043a10f6540352ca085861bfa5304d628e67d3a3e41a8bd5b337744d6d4 started for 8b6f09310a847e0a7aed
=== Container logs for 8b6f09310a847e0a7aed ===
  File "/snippet.py", line 55
    print 'New Products Added to Apple Catalog'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8b6f09310a847e0a7aed ===
[2025-10-29 18:07:51] INFO: Container 13100043a10f6540352ca085861bfa5304d628e67d3a3e41a8bd5b337744d6d4 has stopped
